# mental-poker

./: .gitignore  Cargo.toml
barnett-smart-card-protocol/: Cargo.toml
barnett-smart-card-protocol/examples/: murder.rs  parameter_selection.rs  round.rs  web3.rs
barnett-smart-card-protocol/src/: lib.rs
barnett-smart-card-protocol/src/discrete_log_cards/: masking.rs  mod.rs  remasking.rs  reveal.rs  tests.rs
examples/: Cargo.toml  build.rs
examples/proto/: zkcard.proto
examples/src/service/: client.rs  server.rs  wasm.rs
findora-wasm/: Cargo.toml  LICENSE_MIT
findora-wasm/src/: lib.rs
zkcards/: Cargo.toml
zkcards/round/: round.rs
zkcards/src/: error.rs  lib.rs  player.rs  server.rs  user_card.rs
