[package]
authors = ["Simon Jiao <simonjiaoh@gmail.com>"]
edition = "2021"
name = "examples"
version = "0.1.0"

[[bin]]
name = "grpc-server"
path = "src/service/server.rs"

[[bin]]
name = "grpc-client"
path = "src/service/client.rs"

[dependencies]
tonic = "0.8"
prost = "0.11"
tokio = { version = "1", features = [ "macros", "rt-multi-thread" ] }
barnett-card = { path = "../barnett-smart-card-protocol", package = "barnett-smart-card-protocol" }

[build-dependencies]
tonic-build = "0.8"
